--- a/pom.xml
+++ b/pom.xml
@@ -80,5 +80,12 @@
           <scope>system</scope>
           <systemPath>${project.basedir}/libs/spigot-1.15.2-R0.1-SNAPSHOT.jar</systemPath>
       </dependency>
+      <dependency>
+          <groupId>local</groupId>
+          <artifactId>ItemStashPlugin</artifactId>
+          <version>2.2.4</version>
+          <scope>system</scope>
+          <systemPath>${project.basedir}/libs/ItemStash-2.2.5-all.jar</systemPath>
+      </dependency>
   </dependencies>
 </project>
