--- a/pom.xml
+++ b/pom.xml
@@ -82,10 +82,10 @@
       </dependency>
       <dependency>
           <groupId>local</groupId>
-          <artifactId>ItemStashPlugin</artifactId>
-          <version>2.2.4</version>
+          <artifactId>StorageBox</artifactId>
+          <version>1.5.6</version>
           <scope>system</scope>
-          <systemPath>${project.basedir}/libs/ItemStash-2.2.5-all.jar</systemPath>
+          <systemPath>${project.basedir}/libs/StorageBox-1.5.6.jar</systemPath>
       </dependency>
   </dependencies>
 </project>
