--- a/pom.xml
+++ b/pom.xml
@@ -51,41 +51,23 @@
     </resources>
   </build>
 
-  <repositories>
-      <repository>
-          <id>papermc-repo</id>
-          <url>https://repo.papermc.io/repository/maven-public/</url>
-      </repository>
-      <repository>
-          <id>sonatype</id>
-          <url>https://oss.sonatype.org/content/groups/public/</url>
-      </repository>
-      <repository>
-          <id>minecraft</id>
-          <url>https://libraries.minecraft.net/</url>
-      </repository>
-  </repositories>
+    <repositories>
+        <repository>
+            <id>spigotmc-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
+            <id>sonatype</id>
+            <url>https://oss.sonatype.org/content/groups/public/</url>
+        </repository>
+    </repositories>
+    <dependencies>
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot</artifactId>
+            <version>1.15.2-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
 
-  <dependencies>
-      <dependency>
-          <groupId>com.destroystokyo.paper</groupId>
-          <artifactId>paper-api</artifactId>
-          <version>1.15.2-R0.1-SNAPSHOT</version>
-          <scope>provided</scope>
-      </dependency>
-      <dependency>
-          <groupId>local</groupId>
-          <artifactId>spigot-1.15.2</artifactId>
-          <version>1.15.2-R0.1-SNAPSHOT</version>
-          <scope>system</scope>
-          <systemPath>${project.basedir}/libs/spigot-1.15.2-R0.1-SNAPSHOT.jar</systemPath>
-      </dependency>
-      <dependency>
-          <groupId>local</groupId>
-          <artifactId>StorageBox</artifactId>
-          <version>1.5.6</version>
-          <scope>system</scope>
-          <systemPath>${project.basedir}/libs/StorageBox-1.5.6.jar</systemPath>
-      </dependency>
-  </dependencies>
+    </dependencies>
 </project>
