fix page button

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -61,7 +61,7 @@ Items:
 Lores:
   CommonLore:
     - '&f左クリックで1回変換します'
-    - '&f右クリっくで上限まで変換します'
+    - '&f右クリックで上限まで変換します'
     - ''
   need9:
     - '&f圧縮に必要な数: &a9'
