--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,10 @@ name: CraftGuiExtension
 version: '${project.version}'
 main: net.azisaba.life.CraftGUIExtension
 api-version: '1.15'
-authors: [albardoo02]
+authors: [ albardoo02 ]
+softdepend:
+  - ItemStash
+  - MMLuck
 description: Configでアイテムを設定できるCraftGUI
 website: https://github.com/albardoo02/CraftGUIExtension
 commands:
