--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,6 @@
       </resource>
     </resources>
   </build>
-
     <repositories>
         <repository>
             <id>spigotmc-repo</id>
@@ -59,6 +58,10 @@
         <repository>
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
+        </repository>
+        <repository>
+            <id>azisaba-repo</id>
+            <url>https://repo.azisaba.net/repository/maven-public/</url>
         </repository>
     </repositories>
     <dependencies>
@@ -69,11 +72,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>local</groupId>
+            <groupId>net.azisaba</groupId>
             <artifactId>ItemStash</artifactId>
-            <version>2.2.5</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/libs/ItemStash.jar</systemPath>
+            <version>2.2.3</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
