--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,3 +15,9 @@ commands:
       - /rgui
       - ragui
       - /ragui
+
+permissions:
+  craftguiextension.reload:
+    default: op
+  craftguiextension.register:
+    default: op
