--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: '${project.version}'
 main: net.azisaba.life.CraftGUIExtension
 api-version: '1.15'
 authors: [ albardoo02 ]
-softdepend:
+depend:
   - ItemStash
   - MMLuck
 description: Configでアイテムを設定できるCraftGUI
@@ -15,6 +15,8 @@ commands:
       - /rgui
       - ragui
       - /ragui
+      - craft
+      - /craft
 
 permissions:
   craftguiextension.reload:
